Added bathroom form and geolocation

--- a/app/views/toilets/_toilet.html.erb
+++ b/app/views/toilets/_toilet.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li class="list-group-item">
   <p><a href="<%= toilet_path(toilet) %>"><strong><%= toilet.name %></strong></a>:  <%= toilet.toilet_type %></p>
   <p><%= toilet.description %></p>
 </li>
