--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -1,12 +1,25 @@
-<h1>Nearby</h1>
-<%= form_for @toilet do |f| %>
-  <%= f.text_field :name, placeholder: "name" %>
-  <%= f.select :toilet_type, @toilet_type_options %>
-  <%= f.submit "Submit", id: "new-toilet" %>
-<% end %>
-<ul id="toilets">
-  <%= render @toilets %>
-</ul>
-<div id="infinite-scrolling">
-  <%= will_paginate %>
+<nav id="header" class="navbar fixed-top navbar-light bg-light">
+  <div class="container col">
+    <%= render 'new_toilet' %>
+  </div>
+</nav>
+<div class="container col col-md-8 offset-md-2">
+  <ul id="toilets">
+    <%= render @toilets %>
+  </ul>
 </div>
+
+
+<script>
+  if(navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+      console.log(position.coords);
+      $.getScript(`/?lat=${position.coords.latitude}&lng=${position.coords.longitude}&page=1`);
+    }, function(error) {
+      alert(error);
+    }, {enableHighAccuracy: true, maximumAge: 0});
+  }
+  else {
+    $('#toilets').append('Location not available');
+  }
+</script>
