--- a/app/views/toilets/index.js.erb
+++ b/app/views/toilets/index.js.erb
@@ -1,3 +1,9 @@
+if($('.pagination').size() === 0) {
+  $('body').append('<div id="infinite-scrolling"><%= will_paginate %></div>');
+}
+
+setInfiniteScroll();
+
 $('#toilets').append('<%= j render @toilets %>');
 <% if @toilets.next_page %>
   $('.pagination').replaceWith('<%= j will_paginate @toilets %>');
