--- a/app/views/toilets/index.js.erb
+++ b/app/views/toilets/index.js.erb
@@ -1,10 +1,12 @@
 if($('.pagination').size() === 0) {
-  $('body').append('<div id="infinite-scrolling"><%= will_paginate %></div>');
+  $('#toilets').append('<div id="infinite-scrolling"><%= will_paginate %></div>');
 }
 
 setInfiniteScroll();
 
 $('#toilets').append('<%= j render @toilets %>');
+$('.loading').hide();
+
 <% if @toilets.next_page %>
   $('.pagination').replaceWith('<%= j will_paginate @toilets %>');
 <% else %>
