--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -5,6 +5,7 @@
 </nav>
 <div class="container col col-md-8 offset-md-2">
   <ul id="toilets">
+    <div id="infinite-scrolling"><div class="pagination"></div></div>
     <%= render @toilets %>
   </ul>
   <div class="loading">
@@ -17,10 +18,12 @@
   if(navigator.geolocation) {
     navigator.geolocation.getCurrentPosition(function(position) {
       console.log(position.coords);
-      $.getScript(`/?lat=${position.coords.latitude}&lng=${position.coords.longitude}&page=1`);
+      $.getScript(`/?lat=${position.coords.latitude}&lng=${position.coords.longitude}&page=1&initial=true`);
     }, function(error) {
       alert(error);
+      $.getScript(`/?lat=45&lng=6&page=1`);
     }, {enableHighAccuracy: true, maximumAge: 0});
+
   }
   else {
     $('#toilets').append('Location not available');
