--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -3,7 +3,7 @@
     <%= render 'new_toilet' %>
   </div>
 </nav>
-<div class="container col col-md-8 offset-md-2">
+<div class="container col col-md-8 offset-lg-2">
   <ul id="toilets">
     <div id="infinite-scrolling"><div class="pagination"></div></div>
     <%= render @toilets %>
