--- a/app/views/toilets/_new_toilet.html.erb
+++ b/app/views/toilets/_new_toilet.html.erb
@@ -1,3 +1,3 @@
 <a href="<%= new_toilet_path %>" data-remote="true" class="center">
-  <button class="btn btn-success btn-lg">New Toilet</button>
+  <button class="btn btn-success">New Toilet</button>
 </a>
