--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -21,7 +21,7 @@
   if(navigator.geolocation) {
     navigator.geolocation.getCurrentPosition(function(position) {
       console.log(position.coords);
-      $.getScript(`/?lat=${position.coords.latitude}&lng=${position.coords.longitude}&page=1&initial=true`);
+      $.getScript(`/?lat=${position.coords.latitude}&lng=${position.coords.longitude}&page=1`);
     }, function(error) {
       alert(error);
       $.getScript(`/?lat=45&lng=6&page=1`);
