--- a/app/views/toilets/_toilet.html.erb
+++ b/app/views/toilets/_toilet.html.erb
@@ -10,10 +10,11 @@
 </li>
 <li class="list-group-item hidden">
   <p><%= toilet.description %></p>
-  <div class="review">
+  <div class="rating">
     <strong>Rating: <%= average_rating(toilet) %> / 5</strong>
     <small>(<%= toilet.reviews.count %> reviews)</small>
   </div>
+  <div><%= last_review_in_words(toilet) %></div>
   <div class="static-map">
     <img src="<%="https://maps.googleapis.com/maps/api/staticmap?markers=color:red%7C#{toilet.location.lat},#{toilet.location.lng}&markers=color:green%7C#{@current_location.lat},#{@current_location.lng}&size=400x400&scale=2&key=AIzaSyBHyQP8xlcgazFtPSs6CuP776FnUYFVAXc"%>">
   </div>
