--- a/app/views/toilets/_toilet_form.html.erb
+++ b/app/views/toilets/_toilet_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for toilet, remote: true do |f| %>
   <%= f.text_field :name, placeholder: "name", class: "form-control" %>
-  <%= f.select :toilet_type, type_options, class: "form-control" %>
+  <%= f.select :toilet_type, type_options, {}, { class: "form-control" } %>
   <%= f.text_area :description, placeholder: "description...", class: "form-control" %>
   <%= f.fields_for :location do |ff| %>
     <%= ff.hidden_field :lat, value: '', id: "toilet_lat" %>
