Added devise user authentication

--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -1,6 +1,9 @@
 <nav id="header" class="navbar fixed-top navbar-light bg-light">
-  <div class="container col">
+  <div class="navbar-nav mr-auto">
     <%= render 'new_toilet' %>
+  </div>
+  <div>
+    <%= render 'session' %>
   </div>
 </nav>
 <div class="container col col-md-8 offset-lg-2">
