--- a/app/views/toilets/new.js.erb
+++ b/app/views/toilets/new.js.erb
@@ -1,3 +1,7 @@
+if(!<%= user_signed_in? %>) {
+  window.location.replace("<%= new_user_session_path %>");
+}
+
 $('nav .container').html(
   '<%= j render partial: "toilet_form", locals: { toilet: @toilet, type_options: @type_options, location: @location } %>',
   setLocation(),
