--- a/app/views/toilets/create.js.erb
+++ b/app/views/toilets/create.js.erb
@@ -1,5 +1,9 @@
 $('#toilets').prepend('<%= j render @toilet %>');
 
-$('nav .container').html(
-  '<%= j render "new_toilet" %>'
+$('nav#header').html(
+  '<div class="navbar-nav mr-auto">' +
+  '<%= j render "new_toilet" %>' +
+  '</div><div>' +
+  '<%= j render "session" %>' +
+  '</div>'
 )
